2013-02-26  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/smdscale.m: (v0.3.1)

	- Make opt.maxiter the default stopping criterion.

	* matlab/test/test_smdscale.m: (v0.2.1)

	- Minor, changes to figure titles.

	* Add matlab/ThirdPartyToolbox/sphsplineToolbox:

	- SPHSPLINE Toolbox by Paul Wessel.

	Wessel, P., and J. M. Becker, 2008, Gridding of spherical data
	using a Green's function for splines in tension, Geophys. J. Int.,
	174, 21-28, doi:10.1111/j.1365-246X.2008.03829.x.

	http://www.soest.hawaii.edu/wessel/sphspline/

2013-02-25  Ramon Casero  <rcasero@gmail.com>

	* matlab/test/test_smdscale.m: (v0.2.0)
	* Add matlab/test/test_smdscale_mesh.mat

	- Complete rewrite. Delete previous tests and add "We have a
	sparse distance matrix that defines a local neighbourhood on a
	scattered set of points. We want to project it onto the sphere"

	- Add also example of when we have no initial guess, "In this case
	we have no good initial guess, so we use a random one". We use a
	random point configuration to start with, and the post-Disjkstra
	distance matrix. Using the full matrix seems to work well to go
	from a random configuration to a decently embedding. We then use
	that as the initialisation for another run of MDS, this time using
	the sparse distance matrix. This way, we reduce the error even
	further, as the result gets fine tuned.

	* matlab/ManifoldToolbox/smdscale.m: (v0.3.0)

	- Another big rewrite.

	- We no longer pass a point configuration as input. Now, if we
	want to initialise, we have to pass latitude and longitude, apart
	from the sphere radius. This makes sense given that the algorithm
	works with lat and lon. The previous approach was an ugly hack.

	- Dijkstra is no longer applied on the input distance matrix. It's
	the user's responsibility to perform any kind of processing on the
	distance matrix before passing it to this function.

	- The function is simplified then, because now we only need to